# clean_architecture

./: .gitignore  Makefile  README.md  main.py  pyproject.example.toml  pyproject.toml
src/: _component.py  _micro_service.py  _plantuml_coder.py  app.py  component.py  deps.py  finder.py  graph.py  imports.py  kroki.py  micro_service.py  plantuml_coder.py  plantuml_drawre.py
src/application/: component.py  imports.py  project.py  project_reader.py  uml.py
src/application/services/: inspector.py  metrics.py  parser.py  uml.py
src/application/services/reader/: entity_searcher.py  imports.py  inspect2.py  inspector.py  reader.py
src/infra/: kroki.py
tests/: test_imports.py  test_kroki.py
tests/mock_component/: main.py  pyproject.toml
tests/mock_component/src/: app.py  config.py
tests/mock_component/src/application/: message.py  models.py  parser.py
tests/mock_component/src/presentation/: api.py
tests/test_application/: const.py  test_imports.py  test_project_reader.py  test_uml.py
tests/test_application/test_services/: test_metrics.py  test_uml.py
tests/test_application/test_services/test_reader/: test_imports.py  test_reader.py
tests/test_infra/: test_kroki.py
tests/testdata/: a.py
