[tool.poetry]
name = "clean-architecture"
version = "0.1.0"
description = ""
authors = ["Александр Рахмаев <rahmaevao@engee.cloud>"]
readme = "README.md"
packages = [{include = "clean_architecture"}]

[tool.poetry.dependencies]
python = "^3.10"
pydeps = "^1.12.12"
tomli = "^2.0.1"
requests = "^2.31.0"
loguru = "^0.7.0"
dash = "^2.11.1"
pandas = "^2.0.3"
pyparsing = "^3.1.0"
pytest-clarity = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
