[tool.poetry]
name = "clean-architecture"
version = "0.1.0"
description = ""
authors = ["Александр Рахмаев <rahmaevao@engee.cloud>"]
readme = "README.md"
packages = [{include = "clean_architecture"}]

[tool.poetry.dependencies]
python = "^3.11"
tomli = "^2.0.1"
requests = "^2.31.0"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "0.990"
pytest-cov = "3.0.0"
flake8 = "^6.0.0"
dlint = "^0.14.1"
flake8-bugbear = "^23.6.5"
flake8-pie = "^0.16.0"
flake8-simplify = "^0.20.0"
flake8-warnings = "^0.4.0"
flake8-comprehensions = "^3.13.0"
flake8-eradicate = "^1.5.0"
isort = "^5.12.0"
types-requests = "^2.31.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
