[tool.poetry]
name = "mock-component"
version = "0.1.0"
description = ""
authors = ["Александр Рахмаев <rahmaevao@engee.cloud>"]
readme = "README.md"
packages = [{include = "mock_component"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
